# gen-x

./: README.md  package.json  pnpm-lock.yaml
.husky/: commit-msg
back-end/: Cargo.toml  Dockerfile  fly.toml  watch.toml
back-end/dapp_bootstrapper/: .eslintrc  .prettierrc  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.cjs  tsconfig.json  vite.config.ts
back-end/dapp_bootstrapper/public/: app.webmanifest
back-end/dapp_bootstrapper/src/: app.tsx  main.tsx
back-end/dapp_bootstrapper/src/components/: button.tsx  container.tsx
back-end/dapp_bootstrapper/src/config/: devnet.ts  routes.ts
back-end/dapp_bootstrapper/src/contracts/: contract.ts
back-end/dapp_bootstrapper/src/css/: globals.css
back-end/dapp_bootstrapper/src/pages/: dashboard.tsx  home.tsx  login.tsx
back-end/dapp_bootstrapper/tests/: browsers.test.ts
back-end/src/: main.rs
back-end/src/analysis/: endpoints.rs  enums.rs  mod.rs  structs.rs
back-end/src/endpoints/: generate.rs  healthcheck.rs  mod.rs
back-end/src/models/: mod.rs  sc_address.rs
back-end/src/models/sc_abi/: constructor.rs  custom_type.rs  endpoint.rs  event.rs  field.rs  mod.rs  output.rs  sc_abi.rs  variant.rs
back-end/src/rendering/: config.rs  custom_enum.rs  custom_struct.rs  mod.rs  mutable_endpoint.rs  page.rs  readonly_endpoint.rs  routes.rs
back-end/src/utils/: mod.rs  string_mutation.rs  validation.rs
back-end/templates/: config.ts  custom-enum.ts  custom-struct.ts  mutable-endpoint.ts  page.tsx  readonly-endpoint.ts  routes.ts
front-end/: package.json  (+5 more)
(+28 files in other folders)
