[package]
name = "back-end"
version = "0.1.0"
authors = ["Doinel Atanasiu <doinel1atanasiu@gmail.com>"]
edition = "2021"
repository = "https://github.com/doinel1a/gen-x"
publish = false

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
askama = "0.12.1"
env_logger = "0.10.0"
regex = "1.10.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
zip = "0.6.6"
